Changed the font

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -29,6 +29,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="5dp"
                 android:text="Description"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:gravity="bottom"
                 android:layout_height="20dp"
@@ -37,66 +38,72 @@
             <!--android:layout_below="@+id/flag"-->
             <TextView
                 android:id="@+id/newConfirmed"
-                android:textColor="#606060"
+                android:textColor="#EA0F0F"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="5dp"
                 android:text="Description"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_below="@+id/countryName"
                 />
             <TextView
                 android:id="@+id/totalConfirmed"
-                android:textColor="#606060"
+                android:textColor="#EA0F0F"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="5dp"
                 android:text="Description"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_below="@+id/newConfirmed"
                 />
             <TextView
                 android:id="@+id/newDeaths"
-                android:textColor="#606060"
+                android:textColor="#1B1919"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="5dp"
                 android:text="Description"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_below="@+id/totalConfirmed"
                 />
             <TextView
                 android:id="@+id/totalDeaths"
-                android:textColor="#606060"
+                android:textColor="#1B1919"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="5dp"
                 android:text="Description"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_below="@+id/newDeaths"
                 />
             <TextView
                 android:id="@+id/newRecovered"
-                android:textColor="#606060"
+                android:textColor="#4CAF50"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="5dp"
                 android:text="Description"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_below="@+id/totalDeaths"
                 />
             <TextView
                 android:id="@+id/totalRecovered"
-                android:textColor="#606060"
+                android:textColor="#4caf50"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="5dp"
                 android:text="Description"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_below="@+id/newRecovered"
